# Team_5_AI_Tutor

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  README2.md  pyproject.toml
.virtual_documents/notebooks/Scraper/: CloudRuDocs.ipynb  Untitled.ipynb
.virtual_documents/notebooks/embedding/: multilingual_e5_base.ipynb
.virtual_documents/notebooks/vlm-ingestion-pipeline/: compare_ocr_models-v2.ipynb
AI asist/: COMPLETION_REPORT.txt  DEPLOYMENT.md  FINAL_INSTRUCTIONS.txt  FIX_UNICODE_ERROR.txt  HOW_TO_RUN.txt  INSTALL.md  PROJECT_INVENTORY.txt  PROJECT_STRUCTURE.py  PROJECT_STRUCTURE_DETAILED.md  QUICK_START.md  QUICK_START.txt  README.md  READY_TO_RUN.txt  RUN.txt  START_HERE.txt  SUMMARY.py  UNICODE_FIXED.txt  app.py  config.py  document_processor.py  examples.py  init.py  llm_generator.py  quickstart.py  rag_pipeline.py  requirements.txt  run.py  tests.py  utils.py  vector_store.py
AI asist/data/documents/: README.md  chemistry.txt  mathematics.txt  physics.txt  programming.txt
AI asist/data/vector_store/: chunks_metadata.json  embeddings.npy
AI asist/templates/: index.html
Team_5_AI_Tutor/: __init__.py  dataset.py  features.py  plots.py
Team_5_AI_Tutor/modeling/: predict.py  train.py
data/processed/cloud_ru/: docs.md  docs_evolution_overview_contacts_technical-support.md  docs_tutorials-evolution_list_index.md  docs_tutorials-evolution_list_topics_arenadata-db__adbc-backup.md  docs_tutorials-evolution_list_topics_arenadata-db__dbeaver.md  docs_tutorials-evolution_list_topics_arenadata-db__managed-bi.md  docs_tutorials-evolution_list_topics_arenadata-db__vm-local-ip.md  docs_tutorials-evolution_list_topics_bare-metal__1c_deploy.md  (+104 more)
data/raw/cloud_ru/: metadata.json
data/test_results/: 1-HunyuanOCR_full_results.json  1-HunyuanOCR_stats.csv  1-o-predelnom-mnogomernom-raspredelenii_HunyuanOCR.txt  1-standartizatsiya-i-kachestvo-zhizni_HunyuanOCR.txt  1-Книга_Python_К_вершинам_мастерства_Рамальо_Лучано_HunyuanOCR.txt  HunyuanOCR_o-predelnom-mnogomernom-raspredelenii_20251219_004344.md  HunyuanOCR_o-predelnom-mnogomernom-raspredelenii_20251220_024208.md  HunyuanOCR_o-predelnom-mnogomernom-raspredelenii_20251221_141130.md  HunyuanOCR_results_20251219_004344.json  HunyuanOCR_results_20251220_015800.json  HunyuanOCR_results_20251220_024208.json  HunyuanOCR_results_20251220_054306.json  HunyuanOCR_results_20251220_054840.json  HunyuanOCR_results_20251220_055311.json  HunyuanOCR_results_20251220_132751.json  HunyuanOCR_results_20251220_163017.json  HunyuanOCR_results_20251220_165300.json  HunyuanOCR_results_20251221_141130.json  HunyuanOCR_standartizatsiya-i-kachestvo-zhizni_20251219_004344.md  HunyuanOCR_standartizatsiya-i-kachestvo-zhizni_20251220_024208.md  HunyuanOCR_standartizatsiya-i-kachestvo-zhizni_20251221_141130.md  HunyuanOCR_stats_20251219_004344.csv  HunyuanOCR_stats_20251220_015800.csv  HunyuanOCR_stats_20251220_024208.csv  HunyuanOCR_stats_20251220_054306.csv  HunyuanOCR_stats_20251220_054840.csv  HunyuanOCR_stats_20251220_055311.csv  HunyuanOCR_stats_20251220_132751.csv  HunyuanOCR_stats_20251220_163017.csv  HunyuanOCR_stats_20251220_165300.csv  HunyuanOCR_stats_20251221_141130.csv  HunyuanOCR_Книга_Python_К_вершинам_мастерства_Рамальо_Лучано_20251219_004344.md  HunyuanOCR_Книга_Python_К_вершинам_мастерства_Рамальо_Лучано_20251220_024208.md  HunyuanOCR_Книга_Python_К_вершинам_мастерства_Рамальо_Лучано_20251220_055311.md  HunyuanOCR_Книга_Python_К_вершинам_мастерства_Рамальо_Лучано_20251220_132751.md  HunyuanOCR_Книга_Python_К_вершинам_мастерства_Рамальо_Лучано_20251220_163017.md  HunyuanOCR_Книга_Python_К_вершинам_мастерства_Рамальо_Лучано_20251221_141130.md  LightOnOCR-1B-1025_o-predelnom-mnogomernom-raspredelenii_20251221_175224.md  LightOnOCR-1B-1025_results_20251221_175224.json  LightOnOCR-1B-1025_standartizatsiya-i-kachestvo-zhizni_20251221_175224.md  (+57 more)
docs/: mkdocs.yml
docs/docs/: index.md
models/HunyuanOCR/: .gitignore  LICENSE  README.md  config.json  generation_config.json  model.safetensors.index.json  preprocessor_config.json  special_tokens_map.json  tokenizer_config.json
models/LightOnOCR-1B-1025/: .gitattributes  README.md  chat_template.jinja  config.json  generation_config.json  notebook.ipynb  preprocessor_config.json  processor_config.json  tokenizer.json  tokenizer_config.json  tokenizer_config.json.backup
models/Llama-3.1-Nemotron-Nano-VL-8B-V1/: .gitattributes  README.md  bias.md  config.json  configuration.py  examples.py  explainability.md  image_processing.py  modeling.py  preprocessor_config.json  privacy.md  safety.md  tokenizer.json  tokenizer_config.json
models/Qwen3-VL-8B-Instruct/: config.json
models/jina-vlm/: .gitattributes  README.md  added_tokens.json  blocks_jvlm.py  chat_template.jinja  config.json  configuration_jvlm.py  generation_config.json  image_processing_jvlm.py  infer.py  model.safetensors.index.json  modeling_jvlm.py  preprocessor_config.json  processing_jvlm.py  processor_config.json  pyproject.toml  special_tokens_map.json  tokenizer.json  tokenizer_config.json
models/olmOCR-2-7B-1025/: README.md  generation_config.json
models/olmOCR-2-7B-1025-FP8/: README.md  config.json  generation_config.json  model.safetensors.index.json
notebooks/Scraper/: CloudRuDocs.ipynb
notebooks/embedding/: multilingual_e5_base.ipynb
notebooks/vlm-ingestion-pipeline/: LightOnOCR-test.py  README.md  check_rocm_setup.py  compare_ocr_models-v2.ipynb  compare_ocr_models.ipynb  lms_test.ipynb  ocr_result.txt  pdf_text_extractor.py  pdf_text_extractor_trocr.py  requirements.txt  test-1.ipynb  test-LightOnOCR.ipynb  test-pdf-ex.ipynb  test_extractor.py
rag_pipeline/: README.md  __init__.py  check_server.py  pdf_conversion.py
rag_pipeline/ocr/: QUICKSTART.md  README.md  __init__.py  client.py  config.py  logging_setup.py  pipeline.py  processor.py  utils.py
scripts/: run_ocr.py
(+19567 files in other folders)
