[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Team_5_AI_Tutor"
version = "0.0.1"
description = "Хакатон за третий семестр. Команда 5. Задача 1. Разработка AI-репетитора по техническим дисциплинам, Cloud.ru"
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["Team_5_AI_Tutor"]
include = ["pyproject.toml", "Team_5_AI_Tutor/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Team_5_AI_Tutor"]
force-sort-within-sections = true

