[project]
name = "jina-vlm"
version = "1.0.0"
description = "Jina VLM v1: Lightweight Vision Language Alignment"
readme = "README.md"
license = "CC-BY-NC-4.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.0",
    "pillow>=12.0.0",
    "einops>=0.8.1",
    "accelerate>=1.0.0",
]

[project.optional-dependencies]
flash-attn = ["flash-attn>=2.0.0"]
